[project]
name = "pkmn-drops"
version = "0.1.0"
description = "Pokemon TCG sealed drop calendar and alert relay"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25"]

[project.scripts]
pkmn-drops = "pkmn_drops.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
